force-app/main/default/objects/Candidate_Shweta__c/Candidate_Shweta__c.object-meta.xml
<CustomObject>
    <description>Information about Candidates...</description>
    <label>Candidate_Shweta</label>
    <nameField>
        <displayFormat>Candidate-{0000}</displayFormat>
        <label>Candidate_Shweta Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate_Shwetas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>