force-app/main/default/objects/Candidate_Shweta__c/fields/APEX_Age__c.field-meta.xml
<CustomField>
    <fullName>APEX_Age__c</fullName>
    <formula>year(Today())-year(APEX_DateOFBirth__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>