force-app/main/default/objects/Candidate_Shweta__c/fields/APEX_ApplicationDate__c.field-meta.xml
<CustomField>
    <fullName>APEX_ApplicationDate__c</fullName>
    <label>ApplicationDate</label>
    <type>Date</type>
</CustomField>