force-app/main/default/objects/Candidate_Shweta__c/fields/APEX_DateOFBirth__c.field-meta.xml
<CustomField>
    <fullName>APEX_DateOFBirth__c</fullName>
    <label>DateOFBirth</label>
    <type>Date</type>
</CustomField>