force-app/main/default/objects/Candidate_Shweta__c/fields/APEX_Email__c.field-meta.xml
<CustomField>
    <fullName>APEX_Email__c</fullName>
    <externalId>true</externalId>
    <label>Email</label>
    <type>Email</type>
</CustomField>