force-app/main/default/objects/Candidate_Shweta__c/fields/APEX_ExpectedSalary__c.field-meta.xml
<CustomField>
    <fullName>APEX_ExpectedSalary__c</fullName>
    <label>ExpectedSalary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>