force-app/main/default/objects/Candidate_Shweta__c/fields/APEX_FirstName__c.field-meta.xml
<CustomField>
    <fullName>APEX_FirstName__c</fullName>
    <label>FirstName</label>
    <length>15</length>
    <type>Text</type>
</CustomField>