force-app/main/default/objects/Candidate_Shweta__c/fields/APEX_FullName__c.field-meta.xml
<CustomField>
    <fullName>APEX_FullName__c</fullName>
    <formula>TEXT(APEX_Salutation__c) &amp;  APEX_FirstName__c &amp;  APEX_LastName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FullName</label>
    <type>Text</type>
</CustomField>