force-app/main/default/objects/Candidate_Shweta__c/fields/APEX_JOB_Shwetajob__c.field-meta.xml
<CustomField>
    <fullName>APEX_JOB_Shwetajob__c</fullName>
    <label>Job_Shwetajob</label>
    <referenceTo>APEX_Job_Shweta__c</referenceTo>
    <relationshipLabel>Candidate_Shwetas</relationshipLabel>
    <relationshipName>Candidate_Shwetas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>