force-app/main/default/objects/Candidate_Shweta__c/fields/APEX_LastName__c.field-meta.xml
<CustomField>
    <fullName>APEX_LastName__c</fullName>
    <label>LastName</label>
    <length>15</length>
    <type>Text</type>
</CustomField>