force-app/main/default/objects/Candidate_Shweta__c/fields/APEX_Salutation__c.field-meta.xml
<CustomField>
    <fullName>APEX_Salutation__c</fullName>
    <label>Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mr</fullName>
            </value>
            <value>
                <fullName>Ms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>