force-app/main/default/objects/Candidate_Shweta__c/validationRules/Expected_Salary.validationRule-meta.xml
<ValidationRule>
    <fullName>Expected_Salary</fullName>
    <active>false</active>
    <description>required expected salary</description>
    <errorConditionFormula>ISNULL( APEX_ExpectedSalary__c )</errorConditionFormula>
    <errorDisplayField>APEX_ExpectedSalary__c</errorDisplayField>
    <errorMessage>EXPECTED Salary Missinggggggg</errorMessage>
</ValidationRule>