force-app/main/default/objects/Candidate_Shweta__c/validationRules/NotAllowedMrInFirstName.validationRule-meta.xml
<ValidationRule>
    <fullName>NotAllowedMrInFirstName</fullName>
    <active>true</active>
    <errorConditionFormula>$Setup.Validation_Handler__c.Candidate_Validation__c  &amp;&amp;  $ObjectType.Candidate_Shweta__c.Fields.APEX_FirstName__c!=&apos;Mr&apos;</errorConditionFormula>
    <errorMessage>Mr Not Allowed In First Name</errorMessage>
</ValidationRule>